# RuView

./: CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: firmware-ci.yml
api-docs/adr/: ADR-260-rufield-mfs.md  ADR-261-ruvector-graph-ann-index.md
archive/v1/tests/unit/: test_health_concurrency.py
firmware/esp32-csi-node/: README.md  sdkconfig.defaults.devkitc
firmware/esp32-csi-node/main/: main.c
nvsim/: sw.js.map
plugins/ruview/skills/ruview-hardware-setup/: SKILL.md
ui/services/: api.service.js
ui/utils/: quick-settings.js
v2/crates/homecore-migrate/src/: lib.rs  secrets.rs
v2/crates/wifi-densepose-engine/: Cargo.toml
v2/crates/wifi-densepose-engine/src/: lib.rs
v2/crates/wifi-densepose-hardware/: README.md
v2/crates/wifi-densepose-hardware/src/: lib.rs  mediatek_csi.rs
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/src/: engine_bridge.rs  main.rs  mediatek_csi.rs
